# TF_CSD

./: .gitignore  README.md  pyproject.toml
TFCSD/: db.sqlite3  manage.py
TFCSD/PID/: algorithm.py  apps.py  urls.py  views.py
TFCSD/PID/static/scripts/: controlarBloco.js  tf.js
TFCSD/PID/static/styles/: controlador.css  home.css
TFCSD/PID/templates/PID/: controlador.html  home.html
TFCSD/TFCSD/: asgi.py  settings.py  urls.py  wsgi.py
